<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imagenInicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_factura" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/resumen"
        android:textAlignment="center"
        android:textColor="@color/naranja"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/estado"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/traerEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@+id/estado"
        android:textColor="@color/naranja"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/nombreVeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/diliNombre"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/traerNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:textColor="@color/naranja"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/correoVeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:hint="@string/correo"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/traerCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:textColor="@color/naranja"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/numeroTarjetaVeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:hint="@string/numeroTarjeta"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/traerTarjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:textColor="@color/naranja"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinuar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="550dp"
        android:background="@drawable/btn_background"
        android:text="@string/continuar" />

    </RelativeLayout>