<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.Opcion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/imagenInicio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_bienvenido" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/menu"
                android:textAlignment="center"
                android:textColor="@color/naranja"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRealizar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="300dp"
                android:background="@drawable/btn_background"
                android:text="@string/continuar" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="400dp"
                android:background="@drawable/btn_background"
                android:text="@string/ver" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVolver"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="500dp"
                android:background="@drawable/btn_background"
                android:text="@string/vovler" />


        </RelativeLayout>
    </ScrollView>
</layout>