<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.Opcion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:id="@+id/imagenInicio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_factura" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/resumen"
                android:textAlignment="center"
                android:textColor="@color/naranja"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:hint="@string/estado"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/traerEstado_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="128dp"
                android:layout_toEndOf="@+id/estado"
                android:enabled="false"
                android:textSize="25sp"
                app:startIconDrawable="@drawable/ic_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/traerEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/nombreVeri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="230dp"
                android:hint="@string/diliNombre"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/traerNombre_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="210dp"
                android:layout_toEndOf="@+id/nombreVeri"
                android:enabled="false"
                android:textSize="25sp"
                app:startIconDrawable="@drawable/ic_nombre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/traerNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/correoVeri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="320dp"
                android:hint="@string/correo"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/traerCorreo_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="300dp"
                android:layout_toEndOf="@+id/correoVeri"
                android:enabled="false"
                android:textSize="25sp"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/traerCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/numeroTarjetaVeri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="420dp"
                android:hint="@string/numeroTarjeta"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/traerTarjeta_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="400dp"
                android:layout_toEndOf="@+id/correoVeri"
                android:enabled="false"
                android:textSize="25sp"
                app:startIconDrawable="@drawable/ic_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/traerTarjeta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/fechaVeri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="520dp"
                android:hint="@string/fecha"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/traerFecha_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="500dp"
                android:layout_toEndOf="@+id/fechaVeri"
                android:enabled="false"
                android:textSize="25sp"
                app:startIconDrawable="@drawable/ic_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/traerFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/navigatorBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="650dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancelar"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/cancelar"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_continuar"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_background"
                    android:text="@string/continuar"
                    android:textSize="15sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>